--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ code {
 	padding: 20px;
 }
 
+.genderD {
+	background-color: #A9A9A9;
+	color: #411987;
+	margin: 0 auto;
+	padding: 20px;
+	width: 70%;
+}
+
 .person-card {
 	background-color: #D3D3D3;
 	border-radius: 10px;
