--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	font-family: Helvetica;
 	font-size: 1.3em;
+	padding: 20px;
 }
 
 p {
@@ -15,11 +16,10 @@ code {
 	padding: 20px;
 }
 
-.genderD {
+.card {
 	background-color: #A9A9A9;
 	color: #411987;
 	margin: 0 auto;
-	padding: 20px;
 	width: 70%;
 }
 
